<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodBank</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome To</string>
    <string name="next">Next</string>
    <string name="mirpur">Mirpur</string>
    <string name="dhanm">Dhanmondi</string>
    <string name="gul">Gulshan</string>
    <string name="ban">Banani</string>
    <string name="bailyrd">Baily Road</string>
    <string name="area">Select Your Area</string>
    <string name="uttara">Uttara</string>
    <string name="food">FOODBANK</string>
    <string name="here">Click Here</string>
    <string name="title_activity_main_code">MainCodeActivity</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="title_activity_lauout_one">MainActivity1</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="nawabivoj">Nawabi Voj</string>
    <string name="lorange">LORANGE</string>
    <string name="dosaexpress">Dosa Express</string>
    <string name="shawarmahouse">Shawarma House</string>
    <string name="swiss">Swiss Bakery</string>
    <string name="thirty">Thirty 3</string>
    <string name="title_activity_banani">Banani</string>
    <string name="title_activity_bailyroad">Bailyroad</string>
    <string name="bfc">BFC</string>
    <string name="dhaba">Dhaba</string>
    <string name="kfc">KFC</string>
    <string name="kings">Kings Confectionary</string>
    <string name="boomers">Boomers Cafe</string>
    <string name="live">Live Kitchen</string>
    <string name="tarka">Tarka</string>
    <string name="nandos">Nandos</string>
    <string name="timeout">Timeout</string>
    <string name="star">Star Kabab</string>
    <string name="cafehollywood">Cafe Hollywood</string>
    <string name="redemperor">Red Emporer</string>
    <string name="title_activity_dhanmondi">Dhanmondi</string>
    <string name="arabian">Arabian Fast Food</string>
    <string name="ajo">Ajo Cafe</string>
    <string name="americanburger">American Burger</string>
    <string name="cafemango">Cafe Mango</string>
    <string name="dominus">Dominus Pizza</string>
    <string name="labamba">Labamba</string>
    <string name="korai">Korai Gost</string>
    <string name="nandosdhanmondi">Nandos</string>
    <string name="westerngrill">Western Grill</string>
    <string name="h20">Lounge H20</string>
    <string name="rizbiz">RizBiz Cafe</string>
    <string name="title_activity_gulshan">Gulshan</string>
    <string name="bbq">BBQ Bangladesh</string>
    <string name="burgerworld">Burger World</string>
    <string name="topkapi">Topkapi</string>
    <string name="handi">Handi Dhaka</string>
    <string name="pizzain">Pizza In</string>
    <string name="khazana">Khazana</string>
    <string name="title_activity_mirpur">Mirpur</string>
    <string name="title_activity_uttara">Uttara</string>
    <string name="grabngo">Grab N Go</string>
    <string name="georgescafe">Georges Cafe</string>
    <string name="hungryduck">Hungry Duck</string>
    <string name="hotbox">Hot Box</string>
    <string name="italian">Italian Pizza House</string>
    <string name="fajitas">Fajitas</string>
    <string name="mack">Mack N Jack</string>
    <string name="backyard">The Backyard Cafe</string>
    <string name="tbc">TBC Express</string>
    <string name="title_activity_secongpage">Secongpage</string>
    <string name="americanfriedchicken">American Fried Chicken</string>
    <string name="cafecombo">Cafe Combo</string>
    <string name="citylounge">City Lounge</string>
    <string name="goodys">GOODYS</string>
    <string name="sigree">Sigree</string>
    <string name="peoplesfoodcorner">Peoples Food Corner</string>
    <string name="jinlia">Jinlia Restaurant</string>
    <string name="bittersweet">Bitter Sweet Cafe</string>
    <string name="barbecue">Barbecue Flames</string>
    <string name="gloria">Gloria Jeans Cafe</string>
    <string name="saltz">Saltz</string>
    <string name="kenny">Kenny Rogers Roasters</string>
    <string name="title_activity_secondpage">Secondpage</string>
    <string name="turkish">Turkish Kabab N Pizza</string>
    <string name="movenpick">Move N Pick</string>
    <string name="pizzahut">Pizza Hut</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="loiter">Loiter D85</string>
    <string name="preetom">Preetom</string>
    <string name="tastebud">TasteBud</string>
    <string name="breadnbeyond">Bread and Beyond</string>
    <string name="baburchi">Baburchi Restaurant</string>
    <string name="village">Village Restaurant</string>
    <string name="fazitas">Fajitas</string>
    <string name="title_activity_detalis">DetalisActivity</string>
    <string name="title_activity_bfc">BFC</string>
    <string name="title_activity_all_food">All_foodActivity</string>
    <string name="fooditem">Food Item &amp; Price</string>
    <string name="price">Price</string>
    <string name="location">Address:</string>
    <string name="title_activity_information">Information</string>
    <string name="call">Call :</string>
    <string name="razzle">Razzle</string>

</resources>
