<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_weight="30"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">
      
      
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ra"
    android:orientation="vertical" >
    
 <Button
        android:id="@+id/Button_AMERICAN_BURGER_MIRPUR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp"
        android:text="@string/americanburger"
        android:textColor="#ae2315"
        android:textStyle="bold"
        android:textSize="50sp" />
  
  <Button
         android:id="@+id/Button_AMERICAN_FRIED_CHICKEN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:text="@string/americanfriedchicken"
         android:textColor="#ae2315"
         android:textStyle="bold"
         android:textSize="50sp" />
   
   <Button
         android:id="@+id/Button_CAFE_COMBO"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:text="@string/cafecombo"
         android:textColor="#ae2315"
         android:textStyle="bold"
         android:textSize="50sp" />
   
   <Button
         android:id="@+id/Button_CITY_LOUNGE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:text="@string/citylounge"
         android:textColor="#ae2315"
         android:textStyle="bold"
         android:textSize="50sp" />
   
   <Button
        android:id="@+id/Button_GOODYS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
        android:text="@string/goodys"
        android:textColor="#ae2315"
        android:textStyle="bold"
        android:textSize="50sp" />
   <Button
         android:id="@+id/Button_JINLIA_RESTAURANT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:text="@string/jinlia"
         android:textColor="#ae2315"
         android:textStyle="bold"
         android:textSize="50sp" />
    <Button
        android:id="@+id/Button_PEOPLES_FOOD_CORNER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
        android:text="@string/peoplesfoodcorner"
        android:textColor="#ae2315"
        android:textStyle="bold"
        android:textSize="50sp" />

    <Button
        android:id="@+id/Button_SIGREE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
        android:text="@string/sigree"
        android:textColor="#ae2315"
        android:textStyle="bold"
        android:textSize="50sp" />

    <Button
        android:id="@+id/Button_WESTERN_GRILL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
        android:text="@string/westerngrill"
        android:textColor="#ae2315"
        android:textStyle="bold"
        android:textSize="50sp" />
    
    
</LinearLayout>
</ScrollView>
 